--- a/index.html
+++ b/index.html
@@ -13,8 +13,50 @@
 
 <body>
 <!-- begin root panel -->
+<link rel="stylesheet" type="text/css" href="header.css">
 <div class="utility-header-container">
-	
+	<div class="utility-items">
+		<div class="utility-item">
+			<span class="utility-item-inner">
+				<span class="utility-icon">
+					<i class="fa fa-sun-o"></i>
+				</span>
+				<span class="utility-text temperature"></span>
+			</span>
+		</div>
+		<div class="utility-item">
+			<span class="utility-item-inner">
+				<span class="utility-icon">
+					<i class="fa-id-card"></i>
+				</span>
+				<span class="utility-text">translate</span>
+			</span>
+		</div>
+		<div class="utility-item">
+			<span class="utility-item-inner">
+				<span class="utility-icon">
+					<i class="fa fa-calendar-check-o"></i>
+				</span>
+				<span class="utility-text">book</span>
+			</span>
+		</div>
+		<div class="utility-item">
+			<span class="utility-item-inner">
+				<span class="utility-icon">
+					<i class="fa fa-suitcase"></i>
+				</span>
+				<span class="utility-text">my trip</span>
+			</span>
+		</div>
+		<div class="utility-item">
+			<span class="utility-item-inner">
+				<span class="utility-icon">
+					<i class="fa fa-search"></i>
+				</span>
+				<span class="utility-text">search</span>
+			</span>
+		</div>
+	</div>
 </div>
 <div class="root-container">
 	
