--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="utility-item">
 			<span class="utility-item-inner">
 				<span class="utility-icon">
-					<i class="fa-id-card"></i>
+					<i class="fa fa-imdb"></i>
 				</span>
 				<span class="utility-text">translate</span>
 			</span>
