--- a/index.html
+++ b/index.html
@@ -58,9 +58,20 @@
 		</div>
 	</div>
 </div>
-<div class="root-container">
-	
-</div>
+<header class="header-nav-container narrow-width">
+	<nav class="industry-nav">
+		<ul class="industry-nav-items">
+			<li class="industry-nav-item">media</li>
+			<li class="industry-nav-item">partners</li>
+			<li class="industry-nav-item">sports commission</li>
+			<li class="industry-nav-item">travel trade</li>
+			<li class="industry-nav-item">groups</li>
+			<li class="industry-nav-item">weddings</li>
+			<li class="industry-nav-item">meetings</li>
+		</ul>
+	</nav>
+	<nav class="primary-nav"></nav>
+</header>
 <!-- -->
 </body>
 </html>
