--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!-- begin root panel -->
 <link rel="stylesheet" type="text/css" href="header.css">
 <div class="utility-header-container">
+	<div class="narrow-width">
 	<div class="utility-items">
 		<div class="utility-item">
 			<span class="utility-item-inner">
@@ -56,6 +57,7 @@
 				<span class="utility-text">search</span>
 			</span>
 		</div>
+	</div>
 	</div>
 </div>
 <header class="header-nav-container narrow-width">
