--- a/index.html
+++ b/index.html
@@ -72,7 +72,16 @@
 			<li class="industry-nav-item">meetings</li>
 		</ul>
 	</nav>
-	<nav class="primary-nav"></nav>
+	<nav class="primary-nav">
+		<ul class="primary-nav-items">
+			<li class="primary-nav-item">blog</li>
+			<li class="primary-nav-item">about denver</li>
+			<li class="primary-nav-item">restaurants</li>
+			<li class="primary-nav-item">hotels</li>
+			<li class="primary-nav-item">events</li>
+			<li class="primary-nav-item">things to do</li>
+		</ul>
+	</nav>
 </header>
 <!-- -->
 </body>
