--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 						</span>
 						<span class="utility-text temperature"></span>
 					</span>
+					<div class="utility-item-menu">
+						<ul>
+							<li>one</li>
+							<li>two</li>
+							<li>three</li>
+							<li>four</li>
+						</ul>
+					</div>
 				</div>
 				<div class="utility-item">
 					<span class="utility-item-inner">
